public class AnimationTriggerNames
{
    public const string Jump = "Jump";
    public const string GetDamage = "GetDamage";
}

public class AnimationFloatNames
{
    public const string Speed = "Speed";
}

public class AnimationBoolNames
{
    public const string IsRunning = "IsRunning";
    public const string IsGrounded = "IsGrounded";
    public const string IsDead = "IsDead";
}
